--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "0.555.0",
+    "mongodb": "^5.9.0",
     "next": "16.0.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "axios": "^1.4.0",
-    "mongodb": "^5.9.0",
     "recharts": "^2.4.0"
   },
   "devDependencies": {
